# static_vector

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake.in
include/ml/details/: lazy_initialized_storage.hpp  lazy_storage.hpp  storage_iterator.hpp
include/ml/static_vector/: static_vector.hpp
single_header/: CMakeLists.txt  static_vector.hpp
single_header/include/static_vector/: static_vector.hpp
tests/: CMakeLists.txt  tests.cpp
